--- a/app/src/main/res/menu/activity_list_of_course_tutor_drawer.xml
+++ b/app/src/main/res/menu/activity_list_of_course_tutor_drawer.xml
@@ -12,7 +12,7 @@
             android:title="Notifications" />
         <item
             android:id="@+id/nav_slideshow"
-            android:title="Slideshow" />
+            android:title="My Wallet" />
         <item
             android:id="@+id/Logout"
             android:title="Logout" />
