--- a/app/src/main/res/layout/content_list_of_course_tutor.xml
+++ b/app/src/main/res/layout/content_list_of_course_tutor.xml
@@ -19,9 +19,9 @@
         android:layout_marginLeft="0dp"
         android:layout_marginTop="40dp"
         android:layout_marginRight="0dp"
-        android:background="@color/common_google_signin_btn_text_dark_default"
+        android:background="@drawable/book"
         android:cacheColorHint="@color/common_google_signin_btn_text_dark_pressed"
-        android:divider="@color/colorPrimary"
+        android:divider="@drawable/book"
         android:dividerHeight="3dp"
         android:entries="@color/common_google_signin_btn_text_dark_default"
         android:footerDividersEnabled="true"
