--- a/app/src/main/res/layout/activity_course_view.xml
+++ b/app/src/main/res/layout/activity_course_view.xml
@@ -5,10 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/book"
     android:weightSum="10"
     tools:context=".CourseView">
 
-    <LinearLayout
+    <!--LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -24,10 +25,11 @@
             android:text="Course Details"
             android:textAlignment="center"
             android:textSize="25sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="#fff"/>
 
 
-    </LinearLayout>
+    </LinearLayout-->
 
 
     <ScrollView
@@ -49,7 +51,8 @@
                 android:gravity="bottom"
                 android:text="Course Name"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#fff"/>
 
             <EditText
                 android:id="@+id/courseName"
@@ -59,7 +62,8 @@
                 android:layout_margin="5dp"
                 android:padding="8dp"
                 android:inputType="textPersonName"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="#fff"/>
 
             <TextView
                 android:id="@+id/tutorname"
@@ -70,7 +74,8 @@
                 android:text="Tutor Name"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:visibility="gone"/>
+                android:visibility="gone"
+                android:textColor="#fff"/>
 
             <EditText
                 android:id="@+id/tutorName"
@@ -81,7 +86,8 @@
                 android:padding="8dp"
                 android:inputType="textPersonName"
                 android:textSize="18sp"
-                android:visibility="gone"/>
+                android:visibility="gone"
+                android:textColor="#fff"/>
 
             <TextView
                 android:id="@+id/venue"
@@ -91,7 +97,8 @@
                 android:gravity="bottom"
                 android:text="Venue"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#fff"/>
 
             <EditText
                 android:id="@+id/Venue"
@@ -100,7 +107,8 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/myborder"
                 android:padding="8dp"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="#fff"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -110,7 +118,8 @@
                 android:text="Time(Enter in 24 hrs format)"
                 android:id="@+id/time"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#fff"/>
 
             <EditText
                 android:id="@+id/Time"
@@ -120,7 +129,8 @@
                 android:background="@drawable/myborder"
                 android:padding="8dp"
                 android:inputType="time"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="#fff"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -130,7 +140,8 @@
                 android:id="@+id/duration"
                 android:text="Duration(Enter in 24 hrs format)"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#fff"/>
 
             <EditText
                 android:id="@+id/Duration"
@@ -140,7 +151,8 @@
                 android:background="@drawable/myborder"
                 android:padding="8dp"
                 android:inputType="time"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="#fff"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -150,7 +162,8 @@
                 android:id="@+id/couseagenda"
                 android:text="Course Agenda"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#fff"/>
 
             <EditText
                 android:id="@+id/courseAgenda"
@@ -160,7 +173,8 @@
                 android:background="@drawable/myborder"
                 android:padding="8dp"
                 android:inputType="textPersonName"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="#fff"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -170,7 +184,8 @@
                 android:id="@+id/date"
                 android:text="Date(Enter in format dd/mm/yyyy)"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#fff"/>
 
             <EditText
                 android:id="@+id/course_date"
@@ -180,7 +195,8 @@
                 android:background="@drawable/myborder"
                 android:padding="8dp"
                 android:inputType="date"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="#fff"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -190,7 +206,8 @@
                 android:gravity="bottom"
                 android:text="Price"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#fff"/>
 
             <EditText
                 android:id="@+id/price"
@@ -200,7 +217,8 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/myborder"
                 android:padding="8dp"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="#fff"/>
 
         </LinearLayout>
     </ScrollView>
@@ -221,7 +239,8 @@
             android:text="Delete"
             android:textSize="20sp"
             android:layout_gravity="center_horizontal|bottom"
-            android:background="@drawable/button_tutor"
+            android:background="@drawable/buttonstyle"
+
             />
 
         <Button
@@ -232,7 +251,7 @@
             android:text="Submit"
             android:textSize="20sp"
             android:layout_gravity="center_horizontal|bottom"
-            android:background="@drawable/button_tutor"
+            android:background="@drawable/buttonstyle"
             />
 
     </LinearLayout>
