--- a/app/src/main/res/layout/activity_change_auth_info_tutor.xml
+++ b/app/src/main/res/layout/activity_change_auth_info_tutor.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/book"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="10"
@@ -11,7 +12,7 @@
 
 
 
-    <LinearLayout
+    <!--LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@drawable/border12"
@@ -49,13 +50,13 @@
             app:srcCompat="@android:drawable/ic_secure" />
 
 
-    </LinearLayout>
+    </LinearLayout-->
 
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="9.2"
+        android:layout_weight="10"
         android:id="@+id/scollview">
 
         <LinearLayout
@@ -68,6 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_margin="5dp"
+                android:textColor="#fff"
                 android:gravity="bottom"
                 android:text="New Email"
                 android:textSize="20sp"
@@ -88,6 +90,7 @@
                 android:layout_height="40dp"
                 android:layout_margin="5dp"
                 android:gravity="bottom"
+                android:textColor="#fff"
                 android:text="Current Password"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -106,16 +109,16 @@
             <Button
                 android:id="@+id/changeEmail"
                 android:layout_width="200dp"
-                android:layout_height="40dp"
-                android:background="@drawable/oval"
-                android:backgroundTint="#ddd"
+                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:background="@drawable/buttonstyle"
                 android:text="Change Email" />
 
             <TextView
                 android:id="@+id/spass"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
+                android:textColor="#fff"
                 android:layout_margin="5dp"
                 android:gravity="bottom"
                 android:text="Current Password"
@@ -138,6 +141,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_margin="5dp"
+                android:textColor="#fff"
                 android:gravity="bottom"
                 android:text="New Password"
                 android:textSize="20sp"
@@ -155,11 +159,12 @@
 
             <Button
                 android:id="@+id/changePass"
-                android:background="@drawable/oval"
-                android:backgroundTint="#ddd"
                 android:layout_width="200dp"
-                android:layout_height="40dp"
-                android:layout_margin="5dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="50dp"
+                android:background="@drawable/buttonstyle"
                 android:text="Change Password" />
 
 
