--- a/app/src/main/res/layout/activity_course_view_only.xml
+++ b/app/src/main/res/layout/activity_course_view_only.xml
@@ -6,9 +6,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="10"
+    android:background="@drawable/book"
     tools:context=".CourseViewOnly">
 
-    <LinearLayout
+    <!--LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -27,7 +28,7 @@
             android:textStyle="bold" />
 
 
-    </LinearLayout>
+    </LinearLayout-->
 
 
     <ScrollView
@@ -49,7 +50,8 @@
                 android:gravity="bottom"
                 android:text="Course Name"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#fff"/>
 
             <TextView
                 android:id="@+id/courseName"
@@ -59,7 +61,8 @@
                 android:layout_margin="5dp"
                 android:padding="8dp"
                 android:inputType="textPersonName"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="#fff"/>
 
             <TextView
                 android:id="@+id/tutorname"
@@ -69,7 +72,8 @@
                 android:gravity="bottom"
                 android:text="Tutor Name"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#fff"/>
 
             <TextView
                 android:id="@+id/tutorName"
@@ -79,7 +83,8 @@
                 android:background="@drawable/myborder"
                 android:padding="8dp"
                 android:inputType="textPersonName"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="#fff"/>
 
             <TextView
                 android:id="@+id/venue"
@@ -89,7 +94,8 @@
                 android:gravity="bottom"
                 android:text="Venue"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#fff"/>
 
             <TextView
                 android:id="@+id/Venue"
@@ -98,7 +104,8 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/myborder"
                 android:padding="8dp"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="#fff"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -108,7 +115,8 @@
                 android:text="Time(Enter in 24 hrs format)"
                 android:id="@+id/time"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#fff"/>
 
             <TextView
                 android:id="@+id/Time"
@@ -118,7 +126,8 @@
                 android:background="@drawable/myborder"
                 android:padding="8dp"
                 android:inputType="time"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="#fff"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -128,7 +137,8 @@
                 android:id="@+id/duration"
                 android:text="Duration(Enter in 24 hrs format)"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#fff"/>
 
             <TextView
                 android:id="@+id/Duration"
@@ -138,7 +148,8 @@
                 android:background="@drawable/myborder"
                 android:padding="8dp"
                 android:inputType="time"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="#fff"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -148,7 +159,8 @@
                 android:id="@+id/couseagenda"
                 android:text="Course Agenda"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#fff"/>
 
             <TextView
                 android:id="@+id/courseAgenda"
@@ -158,7 +170,8 @@
                 android:background="@drawable/myborder"
                 android:padding="8dp"
                 android:inputType="textPersonName"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="#fff"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -168,7 +181,8 @@
                 android:id="@+id/date"
                 android:text="Date(Enter in format dd/mm/yyyy)"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#fff"/>
 
             <TextView
                 android:id="@+id/course_date"
@@ -178,7 +192,8 @@
                 android:background="@drawable/myborder"
                 android:padding="8dp"
                 android:inputType="date"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="#fff"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -188,7 +203,8 @@
                 android:gravity="bottom"
                 android:text="Price"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#fff"/>
 
             <TextView
                 android:id="@+id/price"
@@ -198,7 +214,8 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/myborder"
                 android:padding="8dp"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textColor="#fff"/>
 
         </LinearLayout>
     </ScrollView>
@@ -215,7 +232,8 @@
             android:id="@+id/editCourse"
             android:text="Edit/Delete Course"
             android:layout_gravity="center_horizontal|bottom"
-            android:background="@drawable/button_tutor"
+            android:background="@drawable/buttonstyle"
+
             />
 
     </LinearLayout>
