--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".EditProfile"
-    android:background="@drawable/gradientbackground"
+    android:background="@drawable/book"
     >
     <RelativeLayout
         android:layout_width="match_parent"
