--- a/app/src/main/res/layout/activity_tutor_profile_to_student.xml
+++ b/app/src/main/res/layout/activity_tutor_profile_to_student.xml
@@ -13,7 +13,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:background="#00FFFF"
+            android:background="@drawable/book"
             android:id="@+id/layout2"
             android:orientation="horizontal">
         </LinearLayout>
@@ -113,7 +113,8 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="5dp"
-            android:text="Email Tutor" />
+            android:text="Email Tutor"
+            android:background="@drawable/buttonstyle"/>
 
     </RelativeLayout>
 
