--- a/app/src/main/res/layout/activity_student_wallet.xml
+++ b/app/src/main/res/layout/activity_student_wallet.xml
@@ -11,6 +11,7 @@
         android:id="@+id/image"
         android:layout_width="70dp"
         android:layout_height="70dp"
+        android:padding="5dp"
         app:srcCompat="@drawable/rupee" />
 
     <TextView
@@ -44,13 +45,29 @@
     />
 
     <Button
-        android:layout_width="match_parent"
         android:id="@+id/addMoney"
-        android:background="@drawable/buttonstyle"
-        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@+id/money"
-        android:text="Add Money" />
+        android:layout_marginTop="20dp"
+        android:background="@drawable/buttonstyle"
+        android:text="Add Money"
+        android:textSize="18sp" />
 
+    <TextView
+        android:id="@+id/Trans"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@+id/addMoney"
+        android:text="Transactions"
+        android:textAlignment="center"
+        android:textColor="#fff"
+        android:textSize="30sp" />
+
+    <ListView
+        android:id="@+id/Transactions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Trans"></ListView>
 
 </RelativeLayout>
