--- a/app/src/main/res/layout/activity_student_wallet.xml
+++ b/app/src/main/res/layout/activity_student_wallet.xml
@@ -35,14 +35,14 @@
         android:textColor="#fff" />
 
     <EditText
-        android:layout_width="match_parent"
         android:id="@+id/money"
-        android:inputType="number"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/textView4"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:visibility="gone"
-    />
+        android:layout_below="@+id/textView4"
+        android:layout_marginTop="10dp"
+        android:inputType="number"
+        android:textColor="#fff"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/addMoney"
@@ -59,15 +59,24 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@+id/addMoney"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/custom"
         android:text="Transactions"
         android:textAlignment="center"
+        android:textAllCaps="true"
         android:textColor="#fff"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <ListView
         android:id="@+id/Transactions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/Trans"></ListView>
+        android:layout_below="@+id/Trans"
+        android:background="@drawable/custom"
+        android:divider="#eee"
+        android:dividerHeight="1dp"
+        android:footerDividersEnabled="true"
+        android:headerDividersEnabled="true"></ListView>
 
 </RelativeLayout>
