--- a/app/src/main/res/layout/activity_my_profile_student.xml
+++ b/app/src/main/res/layout/activity_my_profile_student.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/book"
     android:fillViewport="true"
     tools:context=".MyProfileStudent">
 
@@ -15,8 +16,8 @@
         <LinearLayout
             android:id="@+id/layout2"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:background="@drawable/book"
+            android:layout_height="182dp"
+            android:background="@color/startblue1"
             android:orientation="horizontal"></LinearLayout>
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -42,15 +43,16 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:gravity="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
             android:textSize="25sp"
             android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/emailicon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_below="@id/editSname"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="25dp"
             android:layout_toLeftOf="@id/email"
             android:scaleType="centerCrop"
             android:src="@drawable/email"
@@ -65,14 +67,15 @@
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="22dp"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
             android:textSize="20sp" />
 
         <ImageView
             android:id="@+id/graduationicon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_below="@id/emailicon"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="25dp"
             android:layout_toLeftOf="@id/email"
             android:background="@drawable/course1"
             android:scaleType="centerCrop" />
@@ -85,14 +88,15 @@
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="20dp"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
             android:textSize="20sp" />
 
         <ImageView
             android:id="@+id/locationicon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_below="@id/graduationicon"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="25dp"
             android:layout_marginBottom="100dp"
             android:layout_toLeftOf="@id/email"
             android:background="@drawable/location1"
@@ -104,34 +108,39 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/graduationicon"
             android:layout_centerHorizontal="true"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="100dp"
-            android:layout_marginLeft="10dp"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
             android:textSize="20sp" />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_below="@+id/location"
             android:id="@+id/loc"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@+id/location"
             android:layout_alignParentBottom="true"
             android:weightSum="2">
 
             <Button
                 android:id="@+id/edit"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/buttonstyle"
-                android:text="Edit Profile" />
+                android:background="@drawable/custom1"
+                android:text="Edit Profile"
+                android:textColor="@color/common_google_signin_btn_text_dark_default" />
 
             <Button
                 android:id="@+id/changeAuth"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/buttonstyle"
-                android:text="Login Info" />
+                android:background="@drawable/custom1"
+                android:text="Login Info"
+                android:textColor="@color/common_google_signin_btn_text_dark_default" />
         </LinearLayout>
     </RelativeLayout>
 
