--- a/app/src/main/res/layout/selectcourse.xml
+++ b/app/src/main/res/layout/selectcourse.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,185 +8,108 @@
     android:orientation="vertical"
     tools:context=".CourseList">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_below="@+id/imageView2"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="236dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="17dp"
-            android:layout_height="17dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="25dp"
-            app:srcCompat="@drawable/tutor" />
-
-
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="17dp"
-            android:layout_height="17dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            app:srcCompat="@drawable/course12"
-
-            />
-
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="17dp"
-            android:layout_height="17dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="31dp"
-            app:srcCompat="@drawable/location1" />
-
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="17dp"
-            android:layout_height="17dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="31dp"
-            android:src="@drawable/duration" />
-
-        <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="17dp"
-            android:layout_height="17dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="29dp"
-            app:srcCompat="@drawable/date1" />
-
-        <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="17dp"
-            android:layout_height="17dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="31dp"
-            app:srcCompat="@drawable/time1" />
-
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="17dp"
-            android:layout_height="17dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            app:srcCompat="@drawable/agenda" />
-
-
-    </LinearLayout>
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imageView2"
-        android:layout_width="0dp"
-        android:layout_height="110dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="37dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/linearlayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_below="@+id/imageView2"
-        android:layout_marginTop="40dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
-        app:layout_constraintTop_toTopOf="parent">
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/TNAME"
-            android:layout_width="wrap_content"
+            android:id="@+id/TNAME1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:text="Tutor"
+            android:textAlignment="textStart"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
+            android:textSize="20dp"
+            android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/CNAME1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
-            android:text="TutorName"
+            android:text="Course"
+
+            android:textAlignment="textStart"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:textStyle="italic" />
 
         <TextView
-            android:id="@+id/CNAME"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:text="CourseName"
-
-            android:textColor="@color/common_google_signin_btn_text_dark_default"
-            android:textSize="20dp" />
-
-        <TextView
-            android:id="@+id/VENUE"
+            android:id="@+id/VENUE1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:text="Venue"
 
+            android:textAlignment="textStart"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:textStyle="italic" />
 
         <TextView
-            android:id="@+id/DURATION"
+            android:id="@+id/DURATION1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:text="Duration"
 
+            android:textAlignment="textStart"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:textStyle="italic" />
 
         <TextView
-            android:id="@+id/DATE"
+            android:id="@+id/DATE1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:text="Date"
 
+            android:textAlignment="textStart"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:textStyle="italic" />
 
         <TextView
-            android:id="@+id/START"
+            android:id="@+id/START1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:text="Start time"
 
+            android:textAlignment="textStart"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:textStyle="italic" />
 
         <TextView
-            android:id="@+id/PRICE"
+            android:id="@+id/PRICE1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:text="Price"
 
+            android:textAlignment="textStart"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:textStyle="italic" />
 
         <TextView
-            android:id="@+id/AGENDA"
+            android:id="@+id/AGENDA1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -194,22 +117,151 @@
             android:layout_weight="1"
             android:text="Agenda"
 
+            android:textAlignment="textStart"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
-            android:textSize="20dp" />
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/custom1"
-            android:text="Register"
-            android:textColor="@android:color/background_light" />
+            android:textSize="20dp"
+            android:textStyle="italic" />
 
 
     </LinearLayout>
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imageView2"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        />
 
-</android.support.constraint.ConstraintLayout>
+
+        <LinearLayout
+            android:id="@+id/linearlayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/imageView2"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="20dp"
+            android:orientation="vertical"
+            android:textAlignment="textEnd">
+
+            <TextView
+                android:id="@+id/TNAME"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:text="Tutor"
+                android:textAlignment="textEnd"
+                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/CNAME"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:text="CourseName"
+
+                android:textAlignment="textEnd"
+                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/VENUE"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:text="Venue"
+
+                android:textAlignment="textEnd"
+                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/DURATION"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:text="Duration"
+
+                android:textAlignment="textEnd"
+                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/DATE"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:text="Date"
+
+                android:textAlignment="textEnd"
+                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/START"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:text="Start time"
+
+                android:textAlignment="textEnd"
+                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/PRICE"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:text="Price"
+
+                android:textAlignment="textEnd"
+                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/AGENDA"
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+
+                android:layout_weight="1"
+                android:text="Agenda"
+                android:textAlignment="textEnd"
+                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="40dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/custom1"
+                android:text="Register"
+                android:textColor="@android:color/background_light" />
+
+
+        </LinearLayout>
+    </RelativeLayout>
+
+</ScrollView>
